# onefile

./: Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf  readme.md
src/: main.rs
src/handlers/: mod.rs  show.rs  upload.rs
