[package]
name        = "onefile"
version     = "1.0.0"
edition     = "2021"
description = "Server for uploading one file and showing it by key"
author      = "Miasnenko Dmitry <clowzed.work@gmail.com>"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.4.0"
actix-web = "4.2.1"
env_logger = "0.10.0"
futures-util = "0.3.25"
log = "0.4.17"
uuid = { version = "1.2.2", features = ["v4"] }